Small lint/architecture fixes

--- a/.data/Makefile
+++ b/.data/Makefile
@@ -1,7 +1,7 @@
 build:
 	go run ./convert.go > ./tmp.go
 	gofmt -w ./tmp.go
-	mv ./tmp.go ../data.go
+	mv ./tmp.go ../rules.gen.go
 
 update:
 	wget -N https://raw.githubusercontent.com/etalab/normadresse/master/normadresse.csv
